<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_menu_item_2"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_like"
        android:title="@string/bottom_menu_2" />

    <item
        android:id="@+id/bottom_menu_item_3"
        android:icon="@drawable/ic_timeline"
        android:title="@string/bottom_menu_3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_menu_item_4"
        android:icon="@drawable/svg_home"
        android:title="@string/bottom_menu_4"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_menu_item_popular"
        android:icon="@drawable/ic_timeline"
        android:title="@string/popular"
        app:showAsAction="ifRoom" />

</menu>
