<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.template.ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/container_enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/xlarge_padding"
            android:gravity="center"
            android:paddingStart="@dimen/xlarge_padding"
            android:paddingEnd="@dimen/xlarge_padding"
            android:text="@string/setup_new_password_hint"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:hint="@string/password"
            app:boxBackgroundColor="@android:color/transparent"
            app:hintTextColor="@color/colorPrimary"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:hint="@string/confirm_password"
            app:boxBackgroundColor="@android:color/transparent"
            app:hintTextColor="@color/colorPrimary"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_login"
            style="@style/primary_сircular_progress_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/xxlarge_padding"
            android:layout_marginBottom="@dimen/xlarge_padding"
            android:text="@string/login" />

    </LinearLayout>
</layout>