<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.android.template.ui.settings.password.viewmodel.ChangePasswordViewModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@android:color/white"
            android:elevation="@dimen/xxsmall_padding"
            app:title="@string/reset_password"
            app:titleTextColor="@android:color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:hint="@string/old_password"
            app:boxBackgroundColor="@android:color/transparent"
            app:error="@{viewModel.oldPasswordError}"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:text="@={viewModel.oldPassword}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:hint="@string/new_password"
            app:boxBackgroundColor="@android:color/transparent"
            app:error="@{viewModel.newPasswordError}"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:text="@={viewModel.newPassword}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:hint="@string/confirm_password"
            app:boxBackgroundColor="@android:color/transparent"
            app:error="@{viewModel.confirmNewPasswordError}"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewModel.confirmNewPassword}" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{safeUnbox(viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> viewModel.save()}"
                android:text="@string/save"
                android:visibility="@{safeUnbox(!viewModel.isLoading()) ? View.VISIBLE : View.GONE}" />

        </FrameLayout>

    </LinearLayout>
</layout>